<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
<ImageView
    android:src="@drawable/ic_launcher_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            android:text="@string/business_corner"
            android:textSize="36sp" />

    </RelativeLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="#F0E6EE">
            <TextView
                style="@style/TextBottom"
                android:text="@string/contact_num" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4F424B"
                android:layout_margin="5dp"/>
            <TextView
                style="@style/TextBottom"
                android:text="@string/address"
                android:textSize="14sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4F424B"
                android:layout_margin="5dp"/>
            <TextView
                style="@style/TextBottom"
                android:text="@string/timings" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4F424B"
                android:layout_margin="5dp"/>
            <TextView
                style="@style/TextBottom"
                android:text="@string/delivery_min" />
        </LinearLayout>
</LinearLayout>